* Bug fixes

  * Don't ignore custom name when you find an old view

2014-08-20 / 0.1.1

* Enhancements

  * One weird trick to make ST_Contains slightly less strict (so that stuff on the border of a view counts as contained)

2014-08-20 / 0.1.0

* Breaking changes

  * MatryoshkaView#lookup now takes geom_source: or the_geom_geojson: arguments

* Bug fixes

  * Fix use of ST_Contains during view creation

0.0.1 / 2014-08-20

initial release